golden/error/parse_seq_condition_no_colon.test
[if true else 0]

# output:
 --> stdin:1:9
  |
1 | [if true else 0]
  |          ^~~~
Error: Expected ':' after the condition.
